# geospectra

./: README.md  pyproject.toml
scripts/: numerical_stability.py
src/geospectra/: __init__.py  _pseudo_inverse.py  basis.py  format.py  linear_basis_function.py  linear_model.py  transform_coding.py  transforms.py
tests/: test_coords.py  test_linear_model.py  test_pca.py  test_sklearn_api.py  test_stability.py
