[project]
name = "geospectra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "scikit-learn>=1.7.0",
]

[project.scripts]
geospectra = "geospectra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
